--- a/front/counter.html
+++ b/front/counter.html
@@ -4,7 +4,7 @@
         <title>counter dapp</title>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js">
-        <script src="./web3.min.js"></script>
+        <script type="text/javascript" src="https://rawgit.com/ethereum/web3.js/develop/dist/web3.min.js"></script>
     </head>
     <body>
 
